# Digitalbee

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.docker/: Dockerfile  docker-compose.yml
docs/: index.srt
src/: app.py
