[tool.poetry]
name = "telegram-bot-project"
version = "0.1.0"
description = "A Telegram bot built with Python."
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sergiogeninatti/Digitalbee.git"
homepage = "https://github.com/sergiogeninatti/Digitalbee.git"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
